# komadori-rs

./: CHANGELOG.MD  Cargo.toml  Makefile.toml  README.md  procedures.md
.github/workflows/: ci.yml  komadori-ci.yml  komadori-rayon-ci.yml  main-ci.yml
benches/: filter_sum_max.rs  fold_large_state.rs  reduce.rs
komadori/: CHANGELOG.MD  Cargo.toml  Makefile.toml  README.md  README.tpl
komadori-rayon/: CHANGELOG.MD  Cargo.toml  DESIGN_NOTES.md  README.md  README.tpl  rustfmt.toml
komadori-rayon/benches/: btree_set.rs  filter_vec_sum.rs  max_vec.rs  two_vecs.rs  vec.rs
komadori-rayon/examples/: reddit_question1.rs
komadori-rayon/examples/par_iter_crate/: main.rs  par_iter_integration.rs
komadori-rayon/proptest-regressions/: num.txt
komadori-rayon/proptest-regressions/collector/adapters/: take.txt
komadori-rayon/src/: cell.rs  cmp.rs  collections.rs  collector.rs  helpers.rs  iter.rs  lib.rs  num.rs  ops.rs  prelude.rs  reference.rs  slice.rs  test_utils.rs  tuple.rs  unit.rs  vec.rs
komadori-rayon/src/cell/: cell_opt_ref_mut.rs
komadori-rayon/src/cmp/: max.rs  min.rs
komadori-rayon/src/collections/: btree_set.rs  linked_list.rs  linked_vec.rs  reservable.rs  reservable_old.rs
komadori-rayon/src/collector/: adapters.rs  custom.rs  indexed_par_collector.rs  into_par_collector.rs  par_collector.rs  par_collector_base.rs  par_collector_by_mut.rs  par_collector_by_ref.rs  plumbing.rs  unindexed_par_collector_base.rs
komadori-rayon/src/collector/adapters/: also.rs  cloning.rs  copying.rs  enumerate.rs  filter.rs  filter_map.rs  fuse.rs  indexed_only.rs  into_collector.rs  into_serial.rs  map.rs  map_output.rs  nest_local.rs  nest_serial.rs  take.rs  take_any_while.rs  tee.rs  tee_base.rs  tee_clone.rs  tee_funnel.rs  tee_mut.rs  unindexed_only.rs
komadori-rayon/src/collector/adapters/nest_local/: fold_local.rs  nest_local.rs  nest_local_with.rs  traits.rs
komadori-rayon/src/iter/: count.rs  for_each.rs  par_count.rs  par_iter_ext.rs  par_reduce.rs  rayon_par_iter_ext.rs  reduce.rs
komadori-rayon/src/iter/rayon_par_iter_ext/: bridge.rs
komadori-rayon/src/ops/: basic_par_closure.rs  call.rs  par_fn.rs  par_product.rs  par_sum.rs  with_local_par_closure.rs
komadori-rayon/src/slice/: drainer.rs  in_place_write.rs  par_iter.rs
komadori-rayon/src/slice/in_place_write/: send_ptr.rs
komadori-rayon/src/test_utils/: coroutine_pool.rs  indexed_split_strategy.rs  par_collector_tester.rs  par_iter.rs  producer.rs  unindexed_split_strategy.rs
komadori-rayon/src/test_utils/par_iter/: chain.rs  cloned.rs  filter.rs
komadori/benches/: filter.rs  filter_sum_max.rs  find.rs  min_max.rs  saturating_sum.rs  sum_find.rs  sum_max.rs
komadori/examples/: asm_view.rs
komadori/proptest-regressions/: num.txt
komadori/proptest-regressions/cmp/: min_max.txt
komadori/src/: aggregate.rs  boxed.rs  cmp.rs  collections.rs  collector.rs  lib.rs  mem.rs  num.rs  prelude.rs  slice.rs  string.rs  sync.rs  test_utils.rs  unit.rs  vec.rs
komadori/src/aggregate/: aggregate_op.rs  group.rs  group_map.rs  imp.rs  ref_aggregate_op.rs
komadori/src/boxed/: boxed_collector.rs
komadori/src/cmp/: all_equal.rs  comparator.rs  is_sorted.rs  is_sorted_by_key.rs  max_by.rs  min_by.rs  min_by_key.rs  min_max.rs  min_max_base.rs  min_max_by.rs  min_max_by_key.rs  value_key.rs
komadori/src/collections/: binary_heap.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  linked_list.rs  vec_deque.rs
komadori/src/collector/: adapters.rs  collector.rs  collector_base.rs  collector_by_mut.rs  collector_by_ref.rs  into_collector.rs
komadori/src/iter/: all_any.rs  count.rs  driver.rs  find_map.rs  fold.rs  for_each.rs  iterator_ext.rs  last.rs  reduce.rs  try_for_each.rs
komadori/src/mem/: dropping.rs  forgetting.rs
komadori/src/ops/: product.rs  sum.rs  tri.rs
komadori/src/slice/: concat.rs
komadori/src/test_utils/: collector_tester.rs
src/: cmp.rs  collector.rs  iter.rs  ops.rs
src/cmp/: is_sorted.rs  is_sorted_base.rs  is_sorted_by.rs  is_sorted_by_key.rs  max.rs  max_by.rs  max_by_key.rs  min.rs  min_by.rs  min_by_key.rs
src/collector/: adapters.rs  collector_base.rs
src/collector/adapters/: filter.rs  filter_map.rs  map.rs  skip.rs  (+6 more)
src/iter/: count.rs  find.rs  find_map.rs  for_each.rs  position.rs  reduce.rs  try_fold.rs  try_for_each.rs
src/sync/: mpsc.rs
(+60 files in other folders)
