[package]
name = "komadori"
version = "0.6.0"
edition = "2024"
authors = ["Ayabin"]
license = "MIT OR Apache-2.0"
description = "Provides a composable, declarative way to consume an iterator"
repository = "https://github.com/discreaminant2809/komadori.git"
readme = "README.md"
categories = ["rust-patterns", "no-std", "no-std::no-alloc", "algorithms"]
keywords = ["collector", "fold", "unzip", "composition", "iterator"]

[dependencies]
itertools = { version = "0.14.0", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.8.2"
proptest = { version = "1.10.0", default-features = false, features = ["std"] }
rand = "0.10.0"

[features]
default = ["std"]
alloc = ["itertools?/use_alloc"]
std = ["alloc", "itertools?/use_std"]
unstable = []
itertools = ["dep:itertools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.bench]
lto = "thin"
codegen-units = 1

[[bench]]
name = "sum_max"
harness = false

[[bench]]
name = "large_state"
harness = false

[[bench]]
name = "find"
harness = false

[[bench]]
name = "sum_find"
harness = false

[[bench]]
name = "min_max"
required-features = ["itertools"]
harness = false