[package]
name = "komadori-rayon"
version = "0.1.0"
edition = "2024"
authors = ["Ayabin"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/discreaminant2809/komadori-rs"
# description = "Provides a composable, declarative way to consume an iterator"
readme = "README.md"
# categories = ["rust-patterns", "no-std", "no-std::no-alloc", "algorithms"]
# keywords = ["collector", "fold", "unzip", "composition", "iterator"]