[package]
name = "komadori-rayon"
version = "0.1.0"
edition = "2024"
authors = ["Ayabin"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/discreaminant2809/komadori-rs"
description = "Multi-reduction library. Provides a composable, declarative way to consume an iterator"
readme = "README.md"
categories = ["concurrency", "rust-patterns", "no-std", "no-std::no-alloc", "algorithms"]
keywords = ["rayon", "parallelism", "collector", "fold", "multi-reduction"]

[dependencies]
komadori = { version = "0.7.0" }
rayon = { version = "1.11.0", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.11.0"
rand = "0.10.1"

[features]
default = ["rayon"]
rayon = ["dep:rayon"]
unstable = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "btree_set"
required-features = ["rayon"]
harness = false

[[bench]]
name = "vec"
required-features = ["rayon"]
harness = false

[[bench]]
name = "two_vecs"
required-features = ["rayon"]
harness = false

[[bench]]
name = "max_vec"
required-features = ["rayon"]
harness = false