[package]
name = "komadori-rayon"
version = "0.1.2"
edition = "2024"
authors = ["Ayabin"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/discreaminant2809/komadori-rs"
description = "Multi-reduction library. Provides a composable, declarative way to reduce in parallel in rayon's style"
readme = "README.md"
categories = ["concurrency", "rust-patterns", "algorithms"]
keywords = ["rayon", "parallelism", "collector", "fold", "multi-reduction"]
exclude = ["DESIGN_NOTES.md"] # Not worth including anyway.

[dependencies]
komadori = { version = "0.7.0" }
rayon = { version = "1.12.0", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.8.2"
par-iter = "2.0.0"
proptest = "1.11.0"
rand = "0.10.1"

[features]
default = ["rayon"]
rayon = ["dep:rayon"]
unstable = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[[bench]]
name = "btree_set"
required-features = ["rayon"]
harness = false

[[bench]]
name = "vec"
required-features = ["rayon"]
harness = false

[[bench]]
name = "two_vecs"
required-features = ["rayon"]
harness = false

[[bench]]
name = "max_vec"
required-features = ["rayon"]
harness = false

[[bench]]
name = "filter_vec_sum"
required-features = ["rayon"]
harness = false

[[example]]
name = "par_iter_crate"

[[example]]
name = "reddit_question1"
required-features = ["rayon"]